All static sections in config.yml are ported.